k8s/ambientes/hom/movie-catalog-service-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: movie-catalog-service-ingress
spec:
  rules:
    - http:
        paths:
          - path: /movie-catalog-service/catalog # same value must be defined in Spring Boot bootstrap.yaml property context-path + / RequestMapping configured in class Resource
            backend:
              serviceName: movie-catalog-service-cluster-ip-service
              servicePort: 80
          - path: /movie-catalog-service/actuator # for actuator endpoints. same value must be defined in Spring Boot bootstrap.yaml property context-path + /actuator
            backend:
              serviceName: movie-catalog-service-cluster-ip-service
              servicePort: 80
      host: movie-catalog-service.hom.k8s.claro.com.br
    - http:
        paths:
          - path: /movie-catalog-service/catalog # same value must be defined in Spring Boot bootstrap.yaml property context-path + / RequestMapping configured in class Resource
            backend:
              serviceName: movie-catalog-service-cluster-ip-service
              servicePort: 80
          - path: /movie-catalog-service/actuator # for actuator endpoints. same value must be defined in Spring Boot bootstrap.yaml property context-path + /actuator
            backend:
              serviceName: movie-catalog-service-cluster-ip-service
              servicePort: 80
      host: movie-catalog-service.hom.claro.com.br
    - http:
        paths:
          - path: /movie-catalog-service/catalog # same value must be defined in Spring Boot bootstrap.yaml property context-path + / RequestMapping configured in class Resource
            backend:
              serviceName: movie-catalog-service-cluster-ip-service
              servicePort: 80
          - path: /movie-catalog-service/actuator # for actuator endpoints. same value must be defined in Spring Boot bootstrap.yaml property context-path + /actuator
            backend:
              serviceName: movie-catalog-service-cluster-ip-service
              servicePort: 80
